environments/dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-backend
  namespace: myapp-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-backend
  template:
    metadata:
      labels:
        app: myapp-backend
    spec:
      containers:
        - name: myapp-backend
          image: ghcr.io/huynhdinhhung/myapp-backend:90b5b02
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
