environments/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-frontend-service
  namespace: myapp-dev
spec:
  selector:
    app: myapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
