environments/dev/myapp-ip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ip-ingress
  namespace: myapp-dev
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: myapp-backend-service
                port:
                  number: 4000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: myapp-backend-service
                port:
                  number: 4000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-frontend-service
                port:
                  number: 80
